--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit</title>
+    <link rel="stylesheet" href="../edit.css">
 </head>
 
 <body>
@@ -52,75 +53,7 @@
     </div>
 
     <style>
-        .edit-page {
-            max-width: 500px;
-            margin: auto;
-            margin-bottom: 100px;
-            padding: 20px;
-            background-color: #f2f2f2;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        label {
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-
-        input[type="text"],
-        input[type="number"],
-        input[type="date"] {
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-
-        }
-
-        input[type=number] {
-            -moz-appearance: textfield;
-        }
-
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-
-        input[type="submit"] {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            font-size: unset;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-
-        .date-container {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .date-input {
-            flex: 1;
-        }
+        
     </style>
 
 </body>
