--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,6 +14,7 @@
         </div>
         <ul class="navbar-menu">
             <li><a href="/">Home</a></li>
+            <li><a href="/">Bookings</a></li>
             <div class="dropdown">
                 <button class="dropbtn">Entries</button>
                 <div class="dropdown-content">
