--- a/views/led.hbs
+++ b/views/led.hbs
@@ -16,8 +16,8 @@
             <div class="dropdown">
                 <button class="dropbtn">Entries</button>
                 <div class="dropdown-content">
-                    <a href="/add">Add Entry</a>
-                    <a href="/view">View Entries</a>
+                    <a href="/entries/add">Add Entry</a>
+                    <a href="/entries/view">View Entries</a>
                 </div>
             </div>
             <li><a href="/led">IOT Control</a></li>
