--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -12,7 +12,7 @@
 
     <div class="edit-page">
         <h1>Edit Form</h1>
-        <form action="/update/{{data.id}}" method="post">
+        <form action="/entries/update/{{data.id}}" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" placeholder="Name" value={{data.name}}><br>
 
