--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,12 +14,11 @@
         </div>
         <ul class="navbar-menu">
             <li><a href="/">Home</a></li>
-            <li><a href="/">Bookings</a></li>
             <div class="dropdown">
                 <button class="dropbtn">Entries</button>
                 <div class="dropdown-content">
-                    <a href="/add">Add Entry</a>
-                    <a href="/view">View Entries</a>
+                    <a href="/entries/add">Add Entry</a>
+                    <a href="/entries/view">View Entries</a>
                 </div>
             </div>
             <li><a href="led">IOT Control</a></li>
