--- a/views/view.hbs
+++ b/views/view.hbs
@@ -19,8 +19,8 @@
             <div class="dropdown">
                 <button class="dropbtn">Entries</button>
                 <div class="dropdown-content">
-                    <a href="/add">Add Entry</a>
-                    <a href="/view">View Entries</a>
+                    <a href="/entries/add">Add Entry</a>
+                    <a href="/entries/view">View Entries</a>
                 </div>
             </div>
             <li><a href="/led">IOT Control</a></li>
@@ -52,8 +52,8 @@
                 <td id="ind{{@index}}">{{this.checkin}}</td>
                 <td id="outd{{@index}}">{{this.checkout}}</td>
                 <td>
-                    <a href="/edit/{{this._id}}">Edit</a>
-                    <a href="/delete/{{this._id}}">Delete</a>
+                    <a href="/entries/edit/{{this._id}}">Edit</a>
+                    <a href="/entries/delete/{{this._id}}">Delete</a>
             </tr>
             {{/each}}
         </tbody>
