--- a/views/view.hbs
+++ b/views/view.hbs
@@ -27,6 +27,11 @@
         </ul>
     </nav>
     <br>
+    <h1>View Entries</h1>
+    <form action="/entries/view" method="GET">
+        <label for="search">Search</label>
+        <input type="date" name="check_in" id="check_in">
+        <input type="submit" value="Search">
     <br>
     <table>
         <thead>
