--- a/public/view.css
+++ b/public/view.css
@@ -77,3 +77,21 @@ summary::before {
 details[open] summary::before {
     content: '-';
 }
+
+.reset-button {
+        display: inline-block;
+        padding: 8px 16px;
+        background-color: #f44336;
+        color: #1a1010;
+        text-decoration: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    .reset-button:hover {
+        background-color: #d32f2f;
+    }
+
+    .reset-button:active {
+        background-color: #b71c1c;
+    }
