--- a/views/led.hbs
+++ b/views/led.hbs
@@ -7,22 +7,7 @@
     
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-logo">
-            <img src="logo.svg" alt="Logo">
-        </div>
-        <ul class="navbar-menu">
-            <li><a href="/">Home</a></li>
-            <div class="dropdown">
-                <button class="dropbtn">Entries</button>
-                <div class="dropdown-content">
-                    <a href="/entries/add">Add Entry</a>
-                    <a href="/entries/view">View Entries</a>
-                </div>
-            </div>
-            <li><a href="/led">IOT Control</a></li>
-        </ul>
-    </nav>
+    {{> navbar}}
   <h1>LED Control</h1>
 
 <form action="/led" method="post">
