--- a/views/entries/view.hbs
+++ b/views/entries/view.hbs
@@ -12,7 +12,7 @@
 <body>
     {{> navbar}}
     <br>
-    <h1>View Entries</h1>
+    <h1>View Customer</h1>
     <details>
         <summary>Search Sort Filter</summary>
          <form action="/entries/view" method="post" class="search_sort_filter">
