--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -8,14 +8,14 @@
         <div class="dropdown">
             <button class="dropbtn">Customer's</button>
             <div class="dropdown-content">
-                <a href="/Customer/add">Add Entry</a>
-                <a href="/Customer/view">View Entries</a>
+                <a href="/Customer/add">Add Customer</a>
+                <a href="/Customer/view">View Customer</a>
             </div>
         </div>
         <div class="dropdown">
             <button class="dropbtn">Entries</button>
             <div class="dropdown-content">
-                <a href="/entries/add">Add Entry</a>
+                <a href="/entries/add">Add Entries</a>
                 <a href="/entries/view">View Entries</a>
             </div>
         </div>
