--- a/public/edit.css
+++ b/public/edit.css
@@ -25,6 +25,7 @@ label {
 
 input[type="text"],
 input[type="number"],
+input[type="email"],
 input[type="date"] {
     padding: 10px;
     margin-bottom: 10px;
