--- a/views/customer/view.hbs
+++ b/views/customer/view.hbs
@@ -16,24 +16,8 @@
     <details>
         <summary>Search Sort Filter</summary>
          <form action="/customer/view" method="post" class="search_sort_filter">
-            <label for="search">From</label>
-            <input type="date" name="From" id="From">
-            <label for="search">Till</label>
-            <input type="date" name="Till" id="Till">
-
             <label for="search">Search</label>
-            <input type="text" name="search" id="search">
-
-            <label for="sort">Sort</label>
-            <select name="sort" id="sort">
-                <option value="name">Name</option>
-                <option value="checkin">Check-in</option>
-                <option value="checkout">Check-out</option>
-            </select>
-            <select name="order" id="order">
-                <option value="desc">Descending</option>
-                <option value="asc">Ascending</option>
-            </select>
+            <input type="text" name="search" id="search" placeholder="Search">
             <input type="submit" value="Search">
         </form>
     <a onclick="load_reset()" class="reset-button">Reset</a>
