--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,6 +5,7 @@
     </div>
     <ul class="navbar-menu">
         <li><a href="/">Home</a></li>
+        <li><a href="/login">Login</a></li>
         <div class="dropdown">
             <button class="dropbtn">Customer's</button>
             <div class="dropdown-content">
