--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,6 +4,7 @@
     <title>Login</title>
 </head>
 <body>
+    {{> navbar}}
     <h1>Login</h1>
     <form action="/login" method="POST">
         <label for="username">Username:</label>
