--- a/views/entries/add.hbs
+++ b/views/entries/add.hbs
@@ -12,11 +12,18 @@
 {{> navbar}}
     <br>
     <form action="/entries/add" method="post">
-        <label for="name">Name:</label>
+        <label for="id">ID:</label>
+        <Select name="user_id" id="user_id">
+            {{#each data}}
+            <option value={{_id}}>{{name}}</option>
+            {{/each}}
+        </Select>
+        <br>
+        {{!-- <label for="name">Name:</label>
         <input type="text" name="name" id="name" placeholder="Name" required="true"><br>
         
         <label for="phone">Phone No.:</label>
-        <input type="number" name="phone" id="phone" placeholder="Phone No."required="true"><br>
+        <input type="number" name="phone" id="phone" placeholder="Phone No."required="true"><br> --}}
         
         <label for="nop">Number of People:</label>
         <input type="number" name="nop" id="nop" placeholder="Number of People" value="1" required="true"><br>
