--- a/views/login.hbs
+++ b/views/login.hbs
@@ -16,4 +16,10 @@
         <input type="submit" value="Login">
     </form>
 </body>
+<script>
+    onload = function() {
+        alert('Please login to continue');
+        document.getElementById('username').focus();
+    }
+</script>
 </html>
