--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,7 +5,6 @@
     </div>
     <ul class="navbar-menu">
         <li><a href="/">Home</a></li>
-        <li><a href="/login">Login</a></li>
         <div class="dropdown">
             <button class="dropbtn">Customer's</button>
             <div class="dropdown-content">
@@ -20,6 +19,20 @@
                 <a href="/entries/view">View Entries</a>
             </div>
         </div>
-        <li><a href="led">IOT Control</a></li>
+         <div class="dropdown">
+            <button class="dropbtn">Invoices</button>
+            <div class="dropdown-content">
+                <a href="/quote">Quotes</a>
+                <a >Invoices</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Settings</button>
+            <div class="dropdown-content">
+                <a href="led">IOT Control</a>
+                <a href="/login">Login</a>
+                <a href="/logout">Logout</a>
+            </div>
+        </div>
     </ul>
 </nav>
