--- a/views/customer/view.hbs
+++ b/views/customer/view.hbs
@@ -7,6 +7,7 @@
     <title>View Customer</title>
     <link rel='stylesheet' type='text/css' media='screen' href='../styles.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='../view.css'>
+    <link rel="manifest" href="../standalone.json">
 </head>
 
 <body>
