--- a/public/navbar.css
+++ b/public/navbar.css
@@ -1,6 +1,11 @@
+
+body {
+    margin: 0;
+    min-height: 100%;
+}
 .navbar {
-    background-color: #ffffff;
-    color: #1f1d1d;
+    background-color: #1c1c1c;
+    color: #ffffff;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -10,6 +15,10 @@
 .navbar-logo {
     font-size: 24px;
     font-weight: bold;
+}
+.navbar-logo img {
+    filter: invert(1);
+    padding:10px;
 }
 
 .navbar-menu {
@@ -29,7 +38,7 @@
     text-decoration: none;
     font-family: Apple Symbols;
     font-size: 22px;
-    color: #1f1d1d;
+    color: #ffffff;
     padding: 5px;
     transition: color 0.3s ease;
 }
@@ -45,10 +54,9 @@
 }
 
 .dropbtn {
-    background-color: #ffffff;
+    background-color: #1c1c1c;
     font-family: Apple Symbols;
-
-    color: #1f1d1d;
+    color: #ffffff;
     /*padding: 10px;*/
     text-decoration: none;
     font-size: 22px;
@@ -61,7 +69,7 @@
     position: absolute;
     font-family: Apple Symbols;
     background-color: #ffffff;
-    min-width: 160px;
+    width: -webkit-max-content;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     font-size: 18px; /* Updated font-size */
@@ -76,6 +84,7 @@
 
 .dropdown-content a:hover {
     background-color: #f9f9f9;
+    color: #ffcc00;
 }
 
 .dropdown:hover .dropdown-content {
@@ -83,6 +92,6 @@
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #ffcc00;
-    color: #ffffff;
+    color: #ffcc00;
+    
 }
