--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../../styles.css">
+<link rel="stylesheet" href="../../navbar.css">
 <nav class="navbar">
     <div class="navbar-logo">
         <img src="logo.svg" alt="Logo">
