--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,5 +1,5 @@
 <div class="sidebar">
-    <h2>Sidebar</h2>
+    <h2>InSync</h2>
     <ul>
         <li>Dashboard</li>
         <li>Users</li>
@@ -11,6 +11,7 @@
 
 h2{
     font-size: 5vh;
+    font-family: Apple Symbols;
     color: #fff;
     margin-bottom: 20px;
     margin-top: 0;
@@ -31,8 +32,9 @@ h2{
     padding: 10px 0;
     padding-left: 10px;
     padding-right: 10px;
-    width:300px;
-    font-size: 3vb;
+    width: 200px;
+    font-family: Apple Symbols;
+    font-size: 22px;
     color: #fff;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -42,7 +44,7 @@ h2{
 
 .sidebar ul li:hover {
     background-color: #a8a8a8;
-    border-radius: 20px;
+    border-radius: 15px;
 }
 
 </style>
