--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,6 +15,6 @@
     {{> dashboard/treanding}}
     {{> dashboard/pending}}
   </div>  
-  <div class="item4">Footer</div>
+  <div class="item4"><a href="http://github.com/aaru911" style="color: rgb(255, 255, 255); font-family: Apple Symbols;">@Araya Bhagat</a></div>
 </div>
 </html>
