--- a/views/partials/dashboard/pending.hbs
+++ b/views/partials/dashboard/pending.hbs
@@ -10,6 +10,7 @@
         ]);
 
         var options = {
+            title: 'Reports for Q1 2022',
             pieHole: 0.5,
             pieSliceTextStyle: {
                 color: 'black',
