--- a/views/partials/dashboard/treanding.hbs
+++ b/views/partials/dashboard/treanding.hbs
@@ -14,7 +14,7 @@
         ]);
 
         var options = {
-            title: 'Age vs. Weight comparison',
+            title: 'Detailed Sales Analysis for Q1 2022',
             legend: 'none',
             crosshair: { trigger: 'both', orientation: 'both' },
             trendlines: {
