--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -22,8 +22,8 @@
          <div class="dropdown">
             <button class="dropbtn">Invoices</button>
             <div class="dropdown-content">
-                <a href="/quote">Quotes</a>
-                <a >Invoices</a>
+                <a href="/invoices/quote">Quotes</a>
+                <a href="/invoices">Invoices</a>
             </div>
         </div>
         <div class="dropdown">
