--- a/public/index.css
+++ b/public/index.css
@@ -22,13 +22,15 @@ body {
     background-color: #1c1c1c;
     border-right: 2px solid #000;
     border-top: 3px solid #000;
-
+    max-width: 300px;
 }
 .item3 {
     height: 100%;
     width: 100%;
     background-color: #ffffff;
     border-color: #000;
+    min-height: 800px;
+
 }
 .item4 {
     width: 100%;
@@ -36,6 +38,7 @@ body {
     color: #ffffff;
     border-top: 3px solid #000;
     font-size: 3vb;
+    font-family: Apple Symbols;
 }
 
 .grid-container {
